<resources>
    <string name="app_name">BravoFrontend</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ***Generic Strings*** -->
    <string name="generic_Insert">Insertar</string>
    <string name="generic_Return">Volver</string>
    <string name="generic_Choose">Elija una opción</string>
    <string name="generic_End">Finalizar</string>

    <!-- ***Form Strings*** -->
    <!-- Vehicle -->
    <string name="title_insert_vehicle">Ingreso del Vehículo</string>
    <!-- New Vehicle Form -->
    <string name="field_Vehiculo_Placa">Placa</string>
    <string name="field_Vehiculo_VIN">Número VIN</string>
    <string name="field_Vehiculo_Marca">Marca del Vehículo</string>
    <string name="field_Vehiculo_Serie">Serie del Motor</string>
    <string name="field_Vehiculo_Tipo">Tipo</string>
    <string name="field_Vehiculo_TipoMotor">Tipo de Motor</string>
    <string name="field_Vehiculo_cd_Tipo">Tipo de Vehículo</string>
    <string name="field_Vehiculo_cd_TipoMotor">Tipo de Motor</string>
    <!-- Client -->
    <string name="title_insert_client">Ingreso del Cliente</string>
    <!-- New Vehicle Form -->
    <string name="field_Client_ID">Identificación</string>
    <string name="field_Client_Name">Nombre</string>
    <string name="field_Client_Email">Email</string>
    <string name="field_Client_Last_Name">Apellido</string>
    <!-- Service -->
    <string name="title_insert_service">Ingreso de Servicios</string>
    <string name="field_Service_AddMore">Añadir más +</string>
    <string name="field_Service_Tipo">Tipo de Servicio</string>
    <string name="field_Service_Observaciones">Observaciones</string>

    <!-- Strings related to login_button -->
    <string name="prompt_email">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar o registrar</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_image_description">Image used for bravos app logo.</string>
    <!-- Strings related to user profile-->
    <string name="profile_image">profile_image</string>
    <string name="nombre">Nombre</string>
    <string name="main_name" />
    <string name="id_profile">Identificacion</string>
    <string name="email_profile">Email</string>
    <string name="telephone_profile">Telefono</string>
    <string name="user_profile">Perfil de Usuario</string>
    <string name="userImage">userImage</string>
    <string name="left_arrow">regresar</string>
    <!-- Main Fragment-related Strings-->
    <string name="clients_button_desc">Consultar clientes</string>
    <string name="vehicles_button_desc">Consultar vehiculos</string>
    <string name="reparations_button_desc">Consultar reparaciones</string>
    <string name="insert_reparations_button_desc">Ingresar reparación</string>

    <!-- String related to reparations searcher-->
    <string name="id_reparacion">Id Reparación:</string>
    <string name="reparaciones">Reparaciones</string>
    <string name="buscar_por">Buscar Por:</string>
    <string name="cedula">Cedula:</string>
    <string name="nombre_cliente">Nombre Cliente:</string>
    <string name="placa_de_vehiculo">Placa de Vehículo:</string>


    <!-- Detalle de reparaciones -->
    <string name="detalle_reparaciones">Info de reparación</string>
    <string name="id_detail">Reparacion:</string>
    <string name="cedula_detail">Cedula:</string>
    <string name="client_detail">Cliente:</string>
    <string name="placa_detail">Placa de vehiculo:</string>
    <string name="services_detail">Lista de servicios:</string>
    <string name="service_id">Servicio</string>
    <string name="service_name">Nombre:</string>
    <string name="observations">Observaciones:</string>
    <string name="state">Estado:</string>
    <!-- Search filter reparacion -->
    <string-array name="reparation_filter">
        <item>Cliente</item>
        <item>Placa</item>
    </string-array>

    <!-- String related to client searcher-->
    <string name="busqueda_clientes">Búsqueda Clientes</string>
    <string name="cliente_identificacion">Identificación:</string>
    <string name="cliente_nombre">Nombre:</string>
    <string name="cliente_email">Email:</string>
    <string name="cliente_entry_date">Fecha de Ingreso:</string>

    <!-- String related to service_details-->
    <string name="title_service_details">Info de servicios:</string>
    <string name="service_details_id">Id de servicio:</string>
    <string name="service_details_name">Nombre:</string>
    <string name="service_details_state">Estado:</string>
    <string name="edit_btn">edit_botton</string>
    <string name="observation_details">Observaciones:</string>
    <string name="placa">Placa:</string>
    <string name="vin">VIN:</string>
    <string name="marca">Marca:</string>
    <string name="motorSerial">Serial del Motor:</string>
    <string name="vehicleClass">Tipo:</string>
    <string name="tipo">Tipo de Motor:</string>
    <string name="busqueda_vehiculos">Búsqueda Vehículos</string>
    <string name="idText">id</string>
    <string name="plateText">TextView</string>
    <string name="typeSpinner">Tipo de vehiculo:</string>
    <string name="motor_type_spinner">Tipo de motor</string>
    <string name="ingrese_un_nuevo_servicio">Ingrese un nuevo servicio</string>
    <string name="observaciones">Observaciones</string>
    <string name="agregar">Agregar</string>
    <string name="observaciones_service">Observaciones</string>
    <string name="descripcion_de_la_reparacion">Descripcion de la reparacion</string>
    <string name="description">Descripcion</string>

</resources>