<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mistyBlue"
    android:orientation="vertical"
    tools:context=".view.reparation.InsertServiceFragment">

    <ImageButton
        android:id="@+id/btn_Service_Return"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/generic_Return"
        android:scaleType="centerInside"
        android:src="@drawable/left_arrow"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/lb_title_AddService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_insert_service"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_Service_AddMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/field_Service_AddMore" />

    <TextView
        android:id="@+id/prueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/field_Service_Tipo"
        android:textColor="#455A64" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="30dp"
        app:singleSelection="true">

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/description_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/descripcion_de_la_reparacion"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/description"
        android:textColor="#455A64" />

    <Button
        android:id="@+id/btn_Service_End"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/generic_End" />

</LinearLayout>