<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mistyBlue"
    android:orientation="vertical"
    android:paddingStart="1dp"
    android:paddingEnd="10dp"
    tools:context=".view.reparation.ReparationDetailsFragment">

    <ImageButton
        android:id="@+id/btn_RepInfo_Return"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/generic_Return"
        android:scaleType="centerInside"
        android:src="@drawable/left_arrow" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/detalle_reparaciones"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/mistyBlue"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:text="@string/id_detail"
                android:textColor="@color/midnightBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/idText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp"
                android:paddingStart="1dp"
                android:paddingEnd="2dp"
                android:text="@string/idText"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/client_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/client_detail"
                android:textColor="@color/midnightBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/clientText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:paddingStart="1dp"
                android:paddingEnd="10dp"
                android:text="@string/client_detail"
                android:textColor="#455A64"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plate_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/placa_detail"
                android:textColor="@color/midnightBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/plateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"
                android:text="@string/plateText"
                android:textColor="#455A64"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/services_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/services_detail"
            android:textColor="@color/midnightBlue"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/service_List"
            android:layout_width="300dp"
            android:layout_height="399dp"
            android:layout_gravity="center"

            android:scrollbars="vertical"
            tools:listitem="@layout/service_list_item" />

    </LinearLayout>

</LinearLayout>