<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewClientFragment">

    <EditText
        android:id="@+id/field_Client_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/field_Client_ID"
        android:inputType="textPersonName"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/field_Client_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/field_Client_Name"
        android:inputType="textPersonName"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/field_Client_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/field_Client_Email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp" />

    <EditText
        android:id="@+id/field_Client_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/field_Client_Phone"
        android:inputType="phone"
        android:minHeight="50dp" />

    <Button
        android:id="@+id/btn_Client_SubmitNew"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/generic_Insert" />

</LinearLayout>