<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/mistyBlue"
    android:orientation="vertical"
    tools:context=".view.userProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_SearchRep_Return"
            android:layout_width="61dp"
            android:layout_height="51dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/left_arrow"
            android:scaleType="centerInside"
            android:scrollbarSize="4dp"
            android:src="@drawable/left_arrow"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/user_profile"
            android:textColor="#0C0C0C"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/userprofile" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="50dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/main_name"
                android:textColor="#212121"
                android:textSize="20sp"
                tools:text="John doe" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/identificacion_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:height="48dp"
            android:autofillHints="@string/id_profile"
            android:drawableStart="@drawable/id"
            android:drawablePadding="10dp"
            android:hint="@string/id_profile"
            android:inputType="textPersonName"
            android:textColorHint="@color/midnightBlue" />

        <EditText
            android:id="@+id/PersonName_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:height="48dp"
            android:autofillHints="@string/nombre"
            android:drawableStart="@drawable/small_profile"
            android:drawablePadding="10dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColorHint="@color/midnightBlue" />

        <EditText
            android:id="@+id/email_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:height="48dp"
            android:autofillHints="@string/email_profile"
            android:drawableStart="@drawable/email"
            android:drawablePadding="10dp"
            android:hint="@string/email_profile"
            android:inputType="textPersonName"
            android:textColorHint="@color/midnightBlue" />

        <EditText
            android:id="@+id/telephone_profile"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:height="48dp"
            android:autofillHints="@string/telephone_profile"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:hint="@string/telephone_profile"
            android:inputType="textPersonName"
            android:textColorHint="@color/midnightBlue" />


    </LinearLayout>

</LinearLayout>