<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mistyBlue"
    android:orientation="vertical"
    tools:context=".InsertVehicle">

    <ImageButton
        android:id="@+id/btn_AddVehicle_Return"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/generic_Return"
        android:scaleType="centerInside"
        android:src="@drawable/left_arrow" />

    <TextView
        android:id="@+id/lb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_insert_vehicle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/addVehicleTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mistyBlue"
        android:contentDescription="@string/generic_Choose" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/addVehiclePager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp">


    </androidx.viewpager2.widget.ViewPager2>

</LinearLayout>