<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/serviceList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/search_view_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_view_background"
            android:clickable="false"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/servicioId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/service_id"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/observations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/observations"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/state"
                android:textColor="#000000"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>